# village

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
app/: manage.py  pyproject.toml  pytest.ini  requirements.txt
app/Dockerfile/: Dockerfile.dev  Dockerfile.prod
app/accounts/: admin.py  authentication.py  exceptions.py  middleware.py  models.py  serializers.py  urls.py  views.py
app/accounts/adapters/: appleadapter.py  appleprovider.py  googleadapter.py  kakaoadapter.py  naveradapter.py  verify_apple_token.py
app/accounts/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0003_auto_20220310_1519.py  0004_alter_user_profile_image.py  0005_auto_20220316_1434.py  0006_alter_user_nickname.py  0007_auto_20220321_1454.py  0008_alter_user_nickname.py  0009_alter_user_nickname.py  0010_user_token.py  0011_auto_20220512_1410.py  0012_auto_20220512_1505.py  0013_blockedpost.py
app/accounts/tests/: factories.py  test_views.py
app/common/: permissions.py  utils.py
app/config/: settings-dev.py  settings.py  urls.py
app/entrypoint/: entrypoint.dev.sh  entrypoint.prod.sh
app/home/: admin.py  models.py  serializers.py  urls.py  views.py
app/home/migrations/: 0001_initial.py  0002_auto_20220504_1438.py  0003_alter_competitionchoice_competition.py
app/posts/: admin.py  models.py  serializers.py  urls.py  views.py
app/posts/migrations/: 0001_initial.py  0002_auto_20220407_1616.py  0003_alter_post_mbti_tags.py  0004_alter_post_mbti_tags.py  0005_alter_post_mbti_tags.py  0006_alter_post_category.py  0007_alter_postimage_post.py  (+13 more)
(+1 files in other folders)
